--- a/sisal.html
+++ b/sisal.html
@@ -21,7 +21,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="/index.php" class="nav__logo">
+            <a href="/index.html" class="nav__logo">
                 <i class="ri-leaf-line nav__logo-icon"></i> BongobTrust Sisal
             </a>
 
@@ -83,7 +83,8 @@
                     <span class="home__social-follow">Follow Us</span>
 
                     <div class="home__social-links">
-                        <a href="https://web.facebook.com/Bongob-Trust-109808934793527" target="_blank" class="home__social-link">
+                        <a href="https://web.facebook.com/Bongob-Trust-109808934793527" target="_blank"
+                            class="home__social-link">
                             <i class="ri-facebook-fill"></i>
                         </a>
                         <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
@@ -190,7 +191,8 @@
                 <article class="product__card">
                     <div class="product__circle"></div>
 
-                    <img src="assets/img/products/agave-angustifolia-marginata.png" alt="Agave ANGUSTIFOLIA MARGINATA" class="product__img">
+                    <img src="assets/img/products/agave-angustifolia-marginata.png" alt="Agave ANGUSTIFOLIA MARGINATA"
+                        class="product__img">
 
                     <h3 class="product__title">Agave ANGUSTIFOLIA MARGINATA</h3>
                     <span class="product__price">$19.99</span>
@@ -230,7 +232,8 @@
                 <article class="product__card">
                     <div class="product__circle"></div>
 
-                    <img src="assets/img/products/agave-deserti-simplex.png" alt="AGAVE DESERTI SIMPLEX" class="product__img">
+                    <img src="assets/img/products/agave-deserti-simplex.png" alt="AGAVE DESERTI SIMPLEX"
+                        class="product__img">
 
                     <h3 class="product__title">AGAVE DESERTI SIMPLEX</h3>
                     <span class="product__price">$5.99</span>
@@ -243,7 +246,8 @@
                 <article class="product__card">
                     <div class="product__circle"></div>
 
-                    <img src="assets/img/products/agave-deserti-var-deserti.png" alt="AGAVE DESERTI VAR. DESERTI" class="product__img">
+                    <img src="assets/img/products/agave-deserti-var-deserti.png" alt="AGAVE DESERTI VAR. DESERTI"
+                        class="product__img">
 
                     <h3 class="product__title">AGAVE DESERTI VAR. DESERTI</h3>
                     <span class="product__price">$10.99</span>
@@ -256,7 +260,8 @@
                 <article class="product__card">
                     <div class="product__circle"></div>
 
-                    <img src="assets/img/products/agave-garciae-mendozae.png" alt="agave garciae mendozae" class="product__img">
+                    <img src="assets/img/products/agave-garciae-mendozae.png" alt="agave garciae mendozae"
+                        class="product__img">
 
                     <h3 class="product__title">Agave Garciae Mendozae</h3>
                     <span class="product__price">$8.99</span>
