--- a/sisal.html
+++ b/sisal.html
@@ -28,7 +28,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/index.php" class="nav__link active-link">Home</a>
+                        <a href="/index.html" class="nav__link active-link">Home</a>
                     </li>
                     <li class="nav__item">
                         <a href="#about" class="nav__link">About</a>
