--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="video-area d-flex align-items-center justify-content-center">
                 <div class="video-wrap position-relative">
                     <div class="video-icon">
-                        <a class="popup-video btn-icon" href="https://youtu.be/TMAWQig0M9g"><i
+                        <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=TMAWQig0M9g"><i
                                 class=" fas fa-play"></i></a>
                     </div>
                 </div>
