Add Authentifications file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/animated-headline.css">
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome/css/all.css">
     <link rel="stylesheet" href="assets/css/themify-icons.css">
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
@@ -178,7 +177,7 @@
                                         environmentally friendly.</P>
                                     <!-- Hero-btn -->
                                     <div class="hero__btn">
-                                        <a href="industries.html" class="hero-btn mb-10" data-animation="fadeInUp"
+                                        <a href="login.html" class="hero-btn mb-10" data-animation="fadeInUp"
                                             data-delay=".8s">Join Us Now</a>
                                     </div>
                                 </div>
@@ -201,7 +200,7 @@
                                         needs, are concerns of the past. </P>
                                     <!-- Hero-btn -->
                                     <div class="hero__btn">
-                                        <a href="industries.html" class="hero-btn mb-10" data-animation="fadeInUp"
+                                        <a href="Login.html" class="hero-btn mb-10" data-animation="fadeInUp"
                                             data-delay=".8s">Join Us Now</a>
                                     </div>
                                 </div>
@@ -225,7 +224,7 @@
                                         the invasion of animals (cows),the cry of farmers</P>
                                     <!-- Hero-btn -->
                                     <div class="hero__btn">
-                                        <a href="industries.html" class="hero-btn mb-10" data-animation="fadeInUp"
+                                        <a href="login.html" class="hero-btn mb-10" data-animation="fadeInUp"
                                             data-delay=".8s">Join Us Now</a>
                                     </div>
                                 </div>
@@ -246,7 +245,7 @@
                                         life<br> we need to protect </P>
                                     <!-- Hero-btn -->
                                     <div class="hero__btn">
-                                        <a href="industries.html" class="hero-btn mb-10" data-animation="fadeInUp"
+                                        <a href="login.html" class="hero-btn mb-10" data-animation="fadeInUp"
                                             data-delay=".8s">Join Us Now</a>
                                     </div>
                                 </div>
