--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                                                     </a>
                                                     <ul class="submenu">
 
-                                                        <li><a href="/challenger.html">The Challenger</a></li>
-                                                        <li><a href="/social-inclusion.html">Social Inclusion</a></li>
-                                                        <li><a href="/sisal.html">SIPEP</a></li>
+                                                        <li><a href="challenger.html">The Challenges</a></li>
+                                                        <li><a href="social-inclusion.html">Social Inclusion</a></li>
+                                                        <li><a href="sisal.html">SIPEP</a></li>
                                                     </ul>
                                                 </li>
 
@@ -124,13 +124,13 @@
                                                         Events</a>
                                                 </li>
 
-                                                <li class="nav_item"><a class="nav_link" href="/about.html">About Us<i
+                                                <li class="nav_item"><a class="nav_link" href="about.html">About Us<i
                                                             class="fas fa-chevron-down"></i> </a>
                                                     <ul class="submenu">
-                                                        <li><a href="/about.html">Who we are</a></li>
-                                                        <li><a href="/where-we-are.html">Where we are</a></li>
-                                                        <li><a href="/mission-value.html">Vison Mission Values</a></li>
-                                                        <li><a href="/our-model.html">Our Model</a></li>
+                                                        <li><a href="about.html">Who we are</a></li>
+                                                        <li><a href="where-we-are.html">Where we are</a></li>
+                                                        <li><a href="mission-value.html">Vison Mission Values</a></li>
+                                                        <li><a href="our-model.html">Our Model</a></li>
                                                         <li><a href="projects.html">Our Projects</a></li>
                                                     </ul>
                                                 </li>
@@ -279,8 +279,8 @@
                             <div class="card-icon">
                                 <img src="./assets/img/logo/donation.svg" alt="">
                             </div>
-                            <h3 class="card-title">Make Donation</h3>
-                            <em>Help us by Make donation</em>
+                            <h3 class="card-title">Make a Donation</h3>
+                            <em>Help us with you donation</em>
                         </div>
 
                         <div class="card-body">
@@ -418,7 +418,7 @@
                                 <img src="assets/img/gallery/services2.png" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="#">Promotion of community peace</a></h5>
+                                <h5><a href="#">Promote community peace</a></h5>
                             </div>
                         </div>
                     </div>
@@ -429,7 +429,7 @@
                                 <img src="assets/img/gallery/services3.png" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="#">Promote actions that generate journals</a></h5>
+                                <h5><a href="#">Promote actions that generate income</a></h5>
                             </div>
                         </div>
                     </div>
@@ -768,6 +768,7 @@
                                     <p>
                                         Copyright &copy;<script>
                                             document.write(new Date().getFullYear());
+
                                         </script> All rights reserved | Made by Arick Bulakali<i class="fa fa-heart"
                                             aria-hidden="true"></i> by <a href="twitter.com/@ndekoCode"
                                             target="_blank">NdekoCode</a>
